# LogTriagePP

./: .gitignore  CMakeLists.txt  README.md
docs/superpowers/plans/: 2026-05-06-logtriage-cpp.md
docs/superpowers/specs/: 2026-05-06-logtriage-cpp-design.md
src/: cluster.cpp  cluster.hpp  constants.hpp  io.cpp  io.hpp  main.cpp  model.cpp  model.hpp  output.cpp  output.hpp  parser.cpp  parser.hpp
tests/: test_core.cpp
